2010-09-09  Colin Watson  <cjwatson@ubuntu.com>

	* Makefile.util.def (libgrub.a): Move grub-core/kern/emu/hostfs.c
	and grub-core/disk/host.c to ...
	(grub-fstest): ... here.  Having the host disk implementation
	present confuses grub-probe and other utility programs.

	* util/grub-mkconfig.in: Only verify readability of grub.cfg.new
	when writing to a file, not when writing to stdout.

2010-09-09  BVK Chaitanya  <bvk.groups@gmail.com>

	* tests/partmap_test.in: New test for partitions.
	* Makefile.util.def: Rules for new test.

2010-09-09  Robert Millan  <rmh@gnu.org>

	* util/grub-probe.c (probe): Fix a pair of unhandled error
	conditions.

2010-09-09  Robert Millan  <rmh@gnu.org>

	Basic Btrfs support (detection and UUID).

	* grub-core/fs/btrfs.c: New file.
	* Makefile.util.def (library): Register btrfs.c.
	* grub-core/Makefile.core.def: Likewise.

2010-09-08  Robert Millan  <rmh@gnu.org>

	* util/grub-mkconfig_lib.in (is_path_readable_by_grub): Improve
	with (optional) parameters to specify device and relative path.
	* util/grub-install.in: Use is_path_readable_by_grub() to
	verify readability of a few critical files.
	* util/grub-mkconfig.in: Use is_path_readable_by_grub() to
	verify readability of grub.cfg.new.

2010-09-08  Vladimir Serbinenko  <phcoder@gmail.com>

	Split minix.mod into minix.mod and minix2.mod.

	* Makefile.util.def (libgrub.a): Add grub-core/fs/minix2.c.
	* grub-core/Makefile.core.def (minix2): New module.
	* grub-core/fs/minix.c: Use definitions instead of runtime version
	checking.
	* grub-core/fs/minix2.c: New file.

2010-09-08  Yves Blusseau  <blusseau@zetam.org>

	Add new --boot-directory option to replace --root-directory

	* util/grub-install.in: Add new --boot-directory option
	* util/grub-reboot.in: Likewise.
	* util/grub-set-default.in: Likewise.

2010-09-08  Yves Blusseau  <blusseau@zetam.org>

        * util/grub-mkconfig.in: Use new variable.

2010-09-08  Yves Blusseau  <blusseau@zetam.org>
